objects/Contact/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>