objects/Contact/fields/isDeletedFromTT__c.field-meta.xml
<CustomField>
    <fullName>isDeletedFromTT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeletedFromTT</label>
    <type>Checkbox</type>
</CustomField>