objects/Contact/fields/IsTelosTouchSyncAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsTelosTouchSyncAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsTelosTouchSyncAllowed</description>
    <label>IsTelosTouchSyncAllowed</label>
    <type>Checkbox</type>
</CustomField>