objects/Contact/fields/Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Login__c</fullName>
    <formula>IF(
ISBLANK(TT_Client_Id__c ),
NULL,
BLANKVALUE(TT_Last_Login__c, $Label.TelosTouchSF__Not_Invite )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Login</label>
    <type>Text</type>
</CustomField>