objects/Contact/fields/TT_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>TT_Last_Login__c</fullName>
    <description>Last Login field editable the contact is invited or logged in</description>
    <label>BackendLastLogin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>