objects/Contact/fields/TT_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>TT_Last_Modified_Date__c</fullName>
    <label>TT Last Modified Date</label>
    <type>DateTime</type>
</CustomField>