objects/Contact/fields/TT_LastSyncTime__c.field-meta.xml
<CustomField>
    <fullName>TT_LastSyncTime__c</fullName>
    <label>TT Last Sync Time</label>
    <type>DateTime</type>
</CustomField>