objects/Contact/fields/TT_Needs_Sync__c.field-meta.xml
<CustomField>
    <fullName>TT_Needs_Sync__c</fullName>
    <formula>OR(
				ISNULL(TT_LastSyncTime__c),
				TT_Last_Modified_Date__c &gt; TT_LastSyncTime__c
)</formula>
    <label>TT Needs Sync</label>
    <type>Checkbox</type>
</CustomField>