objects/Contact/listViews/For_Invite.listView-meta.xml
<ListView>
    <fullName>For_Invite</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Synced__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TT_Client_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>For Invite</label>
</ListView>