objects/Contact/listViews/Salesforce_List_Today.listView-meta.xml
<ListView>
    <fullName>Salesforce_List_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Synced__c</columns>
    <columns>TT_Client_Id__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Salesforce List (Today)</label>
</ListView>