objects/Contact/listViews/TT_Contact.listView-meta.xml
<ListView>
    <fullName>TT_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Last_Login__c</columns>
    <columns>Synced__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>TT_Client_Id__c</columns>
    <filterScope>Mine</filterScope>
    <label>TT Contact</label>
</ListView>