objects/Contact/listViews/TT_Contacts.listView-meta.xml
<ListView>
    <fullName>TT_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Synced__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <columns>TT_LastSyncTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>TT Contacts</label>
</ListView>